[package]
authors = ["Jake Logemann <jake@lgmn.io>"]
edition = "2018"
name = "whoisit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
bytes = "0.6"
color-eyre = "0.5"
dashmap = "3.11"
envfile = "0.2.1"
futures = "0.3.8"
hex = "0.4"
hyper = "0.13.9"
hyper-tls = "0.4.3"
ipnet = {version = "2", features = ["serde"]}
itertools = {version = "0.9"}
log = "0.4"
maxminddb = "0.15.0"
net2 = "*"
once_cell = "*"
serde = "1.0.117"
serde_json = "1.0.59"
shrinkwraprs = "0.3"
static_assertions = "1.1"
structopt = "0.3.20"
surf = "2.1"
thiserror = "1.0"
tokio = {version = "0.3.4", features = ["full"]}
tokio-compat = "*"
toml = "0.5.7"
tracing = {version = "0.1"}
tracing-appender = {version = "0.1.1"}
tracing-error = {version = "0.1"}
tracing-futures = {version = "0.2.4"}
tracing-log = {version = "0.1.1"}
tracing-subscriber = {version = "0.2.15"}
trust-dns-resolver = "*"
typed-builder = "0.7"
url = "2.2.0"
webpki = "0.21.3"
webpki-roots = "0.21.0"
whois-rust = "1.2.3"
x509-parser = "0.8.2"
