[package]
authors = ["Jake Logemann <jake@lgmn.io>"]
edition = "2018"
name = "whoisit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
color-eyre = "0.5"
envfile = "0.2.1"
futures = "0.3.8"
hex = "0.4"
ipnet = {version = "2", features = ["serde"]}
itertools = {version = "0.9"}
log = "0.4"
# maxminddb = "0.15.0"
dashmap = "*"
net2 = "*"
once_cell = "*"
serde = "1.0.117"
serde_json = "1.0.59"
shrinkwraprs = "0.3"
surf = "2.1"
tokio = {version = "0.3.4", features = ["full"]}
tokio-compat = "*"
toml = "0.5.7"
tracing = {version = "0.1"}
tracing-appender = {version = "0.1.1"}
tracing-error = {version = "0.1"}
tracing-futures = {version = "0.2.4"}
tracing-log = {version = "0.1.1"}
tracing-subscriber = {version = "0.2.15"}
trust-dns-resolver = "*"
url = "2.2.0"
